--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		
 	<body>
 		<header>
+			<div class ="navBar">
+				<a href="#services">Services</a>
+				<a href="#stylists">Stylists</a>
+			</div>
 			<div class="d-flex justify-content-center m-5 ">
 				<img src="images/keyhairsalonlogo.png" class="img-fluid mt-2" style="width:80px; height:80px"  alt="KEY Hair Salon Logo">
 				<h1 class="display-1 ps-4">KEY Hair Salon</h1>
