--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<br><br>
 
 			<div class="d-flex align-items-center">
-					<h4>Payment Information</h4>
+					<h4 class="lead">Payment Information</h4>
     				<img id="paymentLogo" src="images/creditcard.png" class="img-fluid mt-2" style="width:40px; height:40px" alt="credit card clipart">
   				</div>
 			<label for="cardName">Cardholder Name:</label>
@@ -170,7 +170,7 @@
 			<br><br>
 
 			<label for="cvv">CVV:</label>
-			<input type="text" id="cvv" name="cvv" pattern="[0-9]{3}" placeholder="123" required>
+			<input type="password" id="cvv" name="cvv" pattern="[0-9]{3}" placeholder="123" required>
 			<br><br>
 
 			<input type="submit" value="Submit" id="submitForm">
