--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<br><br>
 
 			<div class="d-flex align-items-center">
-					<h4 class="lead">Payment Information</h4>
+					<h4 class="display-4 text-center">Payment Information</h4>
     				<img id="paymentLogo" src="images/creditcard.png" class="img-fluid mt-2" style="width:40px; height:40px" alt="credit card clipart">
   				</div>
 			<label for="cardName">Cardholder Name:</label>
@@ -177,7 +177,8 @@
 			<br><br>
 			<input type="reset" value="Reset" id="resetForm">
 
-			<label for ="professional"> Choose your Stylist:
+			<label for ="professional" class="lead">
+			Choose your Stylist:
 			<select name="professional" id="professional" required>
 				<option value="">--Select a stylist--</option>
 				<option value="Olivia">Olivia - Junior Hair Stylist</option>
@@ -187,6 +188,8 @@
 			</select>
 			<br><br>
 			</label>
+			<label for = "pickDate" class="lead">Select from the availiable dates:</label>
+			<input type="date" id="pickDate" name="pickDate" min="2026-03-01" max="2026-08-28">
 		</form>
 		
 
