--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 		</section>
 
 		<form id ="infoForm" onsubmit="bookEverything(event)">
-			<p>Please fill out your personal information below:</p> 
+			<p class="lead">Please fill out your personal information below:</p> 
 			<details>
-				<summary>Why are we collecting this data?</summary>
+				<summary class="lead">Why are we collecting this data?</summary>
 				<p>We are collecting your first and last name, email, phone number, and any notes you would like to share. <br>We are going to share your name and notes with your stylist, so they can be prepared for your appointment. <br>We are collecting two ways to contact you to ensure you recieve our communcations about your appointment.
 				</p>
 			</details>
@@ -183,8 +183,8 @@
 			</select>
 			<br><br>
 			</label>
-			<label for = "pickDate" class="lead">Select from the availiable dates:</label>
-			<input type="date" id="pickDate" name="pickDate" min="2026-03-01" max="2026-08-28">
+			<label for = "pickDate" class="lead text-start">Select from the availiable dates:</label>
+			<input type="date" id="pickDate" name="pickDate" min="2026-03-01" max="2026-08-28">			
 			<br><br>
 			<input type="submit" value="Submit" id="submitForm">
 			<br><br>
