--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						defaultDate:'03-01-2026',
 						changeMonth: true,
 						maxDate: '+4m',
-						minDate: new Date()
+						minDate: '+1'
 					});
 				});
 				</script>
