--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>KEY Hair Salon</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+		<link href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css' rel='stylesheet'>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rel="script" ty>
 	</head>
@@ -184,7 +185,7 @@
 			<br><br>
 			</label>
 			<!-- Date picker implementation inspired by following tutorial: httpss://www.geeksforgeeks.org/jquery/jquery-ui-date-picker/ -->
-			<label for="pickdate" class="lead">Date:</label>
+			<label for="pickdate" class="lead text-start">Date:</label>
 			<input type="text" id="pickdate">
 				<script>
 					$(function(){$("#pickdate").datepicker({
